CRB-1916 adding a new billing modul for preparing storage calculation

--- a/settings.gradle
+++ b/settings.gradle
@@ -75,4 +75,6 @@ include 'cloud-aws-native'
 include 'cloud-aws-gov'
 include 'custom-configurations'
 include 'custom-configurations-api'
+include 'cloud-consumption'
+include 'cloud-consumption-api'
 
