--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -65,7 +65,7 @@ freeipa:
     cache.ttl: 15
   platform.default.instanceType:
     AWS: m5.large
-    AZURE: Standard_D3_v2
+    AZURE: Standard_DS3_v2
     GCP: n1-standard-2
   platform.dnssec.validation:
     AWS: true
