--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -861,6 +861,9 @@ existing-stack-patcher:
       enabled: false
       date-before: 2022-01-18
       custom-rpm-url: https://archive.cloudera.com/cp_clients/thunderhead-metering-heartbeat-application-0.1-SNAPSHOT.x86_64.rpm
+    cluster-public-endpoint:
+      enabled: true
+      related-stacks:
 
 clusterdns:
   host: localhost
