--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -559,6 +559,7 @@ cb:
           7.2.15 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management-small;
           7.2.15 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management;
           7.2.15 - Data Discovery and Exploration=cdp-dde;
+          7.2.15 - Search Analytics=cdp-search-analytics;
           7.2.15 - Streaming Analytics Light Duty with Apache Flink=cdp-flink-light;
           7.2.15 - Streaming Analytics Heavy Duty with Apache Flink=cdp-flink-heavy;
           7.2.15 - COD Edge Node=cdp-cod-edge-node
@@ -578,6 +579,7 @@ cb:
           7.2.16 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management-small;
           7.2.16 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management;
           7.2.16 - Data Discovery and Exploration=cdp-dde;
+          7.2.16 - Search Analytics=cdp-search-analytics;
           7.2.16 - Streaming Analytics Light Duty with Apache Flink=cdp-flink-light;
           7.2.16 - Streaming Analytics Heavy Duty with Apache Flink=cdp-flink-heavy;
           7.2.16 - COD Edge Node=cdp-cod-edge-node
