CB-15872 using the right provider name for selecting gov cloud. added unit tests as well.

--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -144,6 +144,8 @@ dependencies {
   implementation project(':cloud-aws-cloudformation')
   implementation project(':cloud-aws-native')
   implementation project(':cloud-aws-gov')
+  implementation project(':cloud-azure')
+  implementation project(':cloud-gcp')
 
   runtimeOnly project(':orchestrator-salt')
   runtimeOnly project(':cloud-mock')
