CB-16597 Created API format validator. Currently it checks API model classes and looks for mandatory annotations like @ApiModel, @JsonIgnoreProperties(ignoreUnknown = true), @JsonInclude(JsonInclude.Include.NON_NULL), @ApiModelProperty(description).

--- a/datalake-api/build.gradle
+++ b/datalake-api/build.gradle
@@ -13,4 +13,6 @@ dependencies {
   implementation project(':structuredevent-model')
 
   implementation     group: 'io.opentracing.contrib',        name: 'opentracing-jaxrs2',             version: opentracingJaxrs2Version
+
+  testImplementation project(path: ':common', configuration: 'tests')
 }
