CB-16571 Create sudo rules in freeipa as a part of user sync.
In case of full sync we are setting up sudo rules in FreeIPA as a part of user syncronization. Steps are the followings:
-create sudo commands (both allow and deny commands, they are coming from the application.yml)
-create a sudo rule with a name from the application.yml. In case of already avaiable sudo rule the setup will fail in case of hostcategory != all
-assign allow commands to the sudo rule
-assign deny commands to the sude rule
-assign the virtual group of environments/allowPrivilegedOSOperations right to the sudo command

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -139,7 +139,12 @@ freeipa:
         - HA
       HA:
         - TWO_NODE_BASED
-
+  sudo:
+    ruleName: cb-sudo-rule
+    allowCommands: >
+      /**/*
+    denyCommands: >
+      /bin/su
 info:
   app:
     capabilities:
