CB-16724 Reduce the unit test output in builds

--- a/autoscale/build.gradle
+++ b/autoscale/build.gradle
@@ -215,7 +215,7 @@ dependencies {
 
 test {
     include 'com/sequenceiq/**'
-    testLogging.showStandardStreams = true
+    testLogging.showStandardStreams = false
     ignoreFailures = false
     beforeTest { descriptor ->
         logger.lifecycle("Running test: " + descriptor)
