CB-16737 Implement instance type selection in FreeIPA
New optional instanceType field added to AttachedFreeIpaRequest. Custom instance type should be selected based on the get_recommendation response (memory and CPU should be greater than or equal than default)
Required entitlement: CDP_FREEIPA_SELECT_INSTANCE_TYPE

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -19,6 +19,7 @@ auth:
       ha:
         repair.enable: true
       rebuild.enable: true
+      select.instance.type.enable: true
     cloudstoragevalidation.enable:
       global: true
       aws: true
