--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -67,6 +67,7 @@ freeipa:
     AWS: m5.large
     AZURE: Standard_DS3_v2
     GCP: n1-standard-2
+    MOCK: large
   platform.dnssec.validation:
     AWS: true
     AZURE: false
