CB-16698 Add entitlement for Datalake ZDU OS upgrade

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -44,6 +44,7 @@ auth:
       recovery.resize.enable: true
       multiaz.enable: true
       select.instance.type.enable: true
+      zdu.osupgrade.enable: true
     differentdatahubversionthandatalake.enabled: true
     database.wire.encryption.enable: true
     datahub:
