--- a/autoscale/build.gradle
+++ b/autoscale/build.gradle
@@ -180,6 +180,7 @@ dependencies {
     implementation group: 'io.springfox',                  name: 'springfox-boot-starter'
 
     implementation group: 'io.opentracing.contrib',    name: 'opentracing-spring-jaeger-starter',        version: opentracingSpringJaegerStarterVersion
+    implementation group: 'com.dyngr',                 name: 'polling',                                  version: '1.1.3'
 
     implementation     ('io.swagger:swagger-jersey2-jaxrs') {
       exclude group: 'org.yaml'
@@ -202,6 +203,7 @@ dependencies {
 
     implementation project(':core-api')
     implementation project(':autoscale-api')
+    implementation project(':freeipa-api')
     implementation project(':common')
     implementation project(':workspace')
     implementation project(':secret-engine')
