CB-16567 Remove clusters from periscope after they have been deleted from cloudbreak  - A new monitor that runs every 10 minutes to poll cloudbreak and check if a DH has been deleted  - Covered new monitor with UTs

--- a/autoscale/src/main/resources/application-test.yml
+++ b/autoscale/src/main/resources/application-test.yml
@@ -56,6 +56,8 @@ periscope:
       enabled: false
     cluster-status-monitor:
       enabled: false
+    delete-monitor:
+      enabled: false
 
 cb:
   server:
