CB-16509 CB-16491 Introduce new executor for usersync and timeouts for threads
Usersync logic before the commit:
- usersync request after validation starts an `Operation` and submits a task in `UserSyncExecutor`
- after some followup calculations this task would submit one or more task to the same `UserSyncExecutor`
- then the first started task would wait for the others to finish
- when they are finished the `Operation` would be finished too

Issues with this logic:
- if many requests arrive at once they can exhaust the `UserSyncExecutor`'s pool and the internal tasks would never start
and thus the whole user sync feature would be in deadlock until the application restart
- when there is a long running usersync the operation might time out, while the thread would still run it

Changes in logic:
- new executor introduced for internal tasks to avoid deadlocks
- new entitlement: `CDP_FMS_USERSYNC_THREAD_TIMEOUT`
- if the entitlement enabled the following logic is turned on:
  - for the external task a new task is scheduled in a separate threadpool
    - it is scheduled after `0.95 * Operation's timeout`, so it would run before the started `Operation` is timed out by the cleanup job
    - if the usersync external task is running or waiting for execution, then the scheduled task would cancel it and timeout the `Operation`
    - otherwise it would just log
    - logic is in `UserSyncService#scheduleTimeoutTask`
  - for internal tasks the returned `Future#get` method is used for timing out
    - timeout is calculated as `0.9 * Operation's timeout`, so it would time out before the external task
    - as many tasks could be submitted, and those could be delayed if there is no executor thread is available, the timeout
is calculated by decreasing the waiting time by the elapsed time since the task was submitted
    - if the task times out then `Future#cancel(true)` is invoked, which sets the `Thread#interrupted` flag to `true`
    - all usersync related logic has been enriche

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -20,6 +20,8 @@ auth:
         repair.enable: true
       rebuild.enable: true
       select.instance.type.enable: true
+      batch.call.enable: true
+      usersync.thread.timeout.enable: true
     cloudstoragevalidation.enable:
       global: true
       aws: true
@@ -66,7 +68,6 @@ auth:
     nodestatus.salt.ping.enable: true
     diagnostics.vm.enable: true
     user.sync.credentials.update.optimization.enable: true
-    freeipa.batch.call.enable: true
     azure:
       disk:
         SSEWithCMK.enable: true
