--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -88,6 +88,7 @@ auth:
     unbound.elimination.enable: true
     targeted.upscale.enable: true
     e2e.test.only.enable: true
+    workloadiam.sync.enable: false
 
 crn:
   partition: cdp
