CB-13519 - DL-syncer: use CM version from Salt
This commit introduces the following changes:
- CB-13519 - CM Server and Agent are fetched via Salt instead of from CM Server
  - to include build numbers amongst the versions, too
- CB-16986 - validation for different combinations of CM versions received from Salt
  - in case of validation error, the roll-forward is not permitted, until the error is fixed

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -787,7 +787,9 @@ cb:
       - name: cm
         pkg:
           - name: cloudera-manager-agent
-            pattern: "(.*)-.*"
+            pattern: "(.*)-(.*)\\..*"
+          - name: cloudera-manager-server
+            pattern: "(.*)-(.*)\\..*"
         prewarmed: true
   paywall.url: "https://archive.cloudera.com/p/cdp-public/"
   nodestatus:
