CB-16487. Manage cdp-vmagent and exporters by salt + provide telemetry api for env/freeipa/dl/dh
details (CB-16485 | CB-16486 | CB-16487):
- cleanup databus based monitoring (from java code + from fluentd salt configs + entitlements)
- use CDP_SAAS entitlement for using central monitoring
- use monitoring global flag to provide data about monitoring is set or not (if not disabled  by feature flags - monitoring is set, even if CDP_SAAS entitlement is not enabled)
- add monitoring field for telemetry object (at the moment it will only hold the remoteRewriteUrl)
- update salt defs to start exporters + vmagent (vmagent can be installed if not available on the image)
- extends DL/DH/FreeIPA/Evn API with monitoring details
- provide a way to configure username/password or token globally when setting up authentication for remote prometheus (so it can be configured locally)

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -24,12 +24,25 @@ telemetry:
     base-url: https://archive.cloudera.com/p/cdp-infra-tools/latest/redhat7/yum
     gpg-key: https://archive.cloudera.com/p/cdp-infra-tools/latest/redhat7/yum/RPM-GPG-KEY/RPM-GPG-KEY-Jenkins
     gpg-check: 1
+  monitoring:
+    enabled: false
+    paas-support: false
+    remote-write-url: ""
+    scrape-interval-seconds: 300
+    dev-stack: false
+    global-auth:
+      enabled: false
+      username: ""
+      password: ""
+      token: ""
   upgrade:
     enabled: false
     cdp-telemetry:
       desired-version: 0.4.23
     cdp-logging-agent:
       desired-version: 0.2.16
+    cdp-vm-agent:
+      desired-version: 1.73.1
     metering-agent:
       desired-date: 2022-01-18
   usage:
