iCB-16771 Create and include clients in CB context to communicate with Jackalope services - added new sdx-saas-connector module for SAAS related SDX clients (client configs, proto files, etc.) - added mock service for SDX Saas service - added new service to make appropriate call regarding SDX based on CRN - refactored SDX deletion polling in environment service to use new connector - added new mock test to cover hybrid use case (environment paas creation, sdx saas creation, environment cascade deletion)

--- a/autoscale/build.gradle
+++ b/autoscale/build.gradle
@@ -180,7 +180,7 @@ dependencies {
     implementation group: 'io.springfox',                  name: 'springfox-boot-starter'
 
     implementation group: 'io.opentracing.contrib',    name: 'opentracing-spring-jaeger-starter',        version: opentracingSpringJaegerStarterVersion
-    implementation group: 'com.dyngr',                 name: 'polling',                                  version: '1.1.3'
+    implementation group: 'com.dyngr',                 name: 'polling',                                  version: dyngrPollingVersion
 
     implementation     ('io.swagger:swagger-jersey2-jaxrs') {
       exclude group: 'org.yaml'
