--- a/gradle.properties
+++ b/gradle.properties
@@ -73,6 +73,7 @@ accessorSmartVersion=2.4.7
 oauth2OidcSdkVersion=6.5
 protobufVersion=3.19.1
 grpcVersion=1.42.1
+dyngrPollingVersion=1.1.3
 
 # Repo Urls
 repoUrl=https://repo.hortonworks.com/content/repositories/releases/
