--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -107,6 +107,9 @@ dependencies {
   implementation (project(':audit-connector')) {
     transitive = false;
   }
+  implementation (project(':sdx-connector')) {
+    transitive = false;
+  }
 
   implementation project(':common')
   implementation project(':cloud-gcp')
