--- a/mock-thunderhead/build.gradle
+++ b/mock-thunderhead/build.gradle
@@ -82,4 +82,5 @@ dependencies {
   implementation project(':datalake-dr-connector')
   implementation project (':cloud-api')
   implementation project(':cluster-dns-connector')
+  implementation project(':sdx-connector')
 }
