--- a/cloud-aws-cloudformation/build.gradle
+++ b/cloud-aws-cloudformation/build.gradle
@@ -21,7 +21,7 @@ dependencies {
   implementation project(':template-manager-tag')
   implementation project(':auth-connector')
 
-  implementation group: 'com.dyngr', name: 'polling', version: '1.1.3'
+  implementation group: 'com.dyngr', name: 'polling', version: dyngrPollingVersion
 
     // mockito juniper depends on ByteBuddy 1.9.7, but hibernate use older version
   implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.12'
