--- a/cloud-aws-native/build.gradle
+++ b/cloud-aws-native/build.gradle
@@ -43,7 +43,7 @@ dependencies {
   implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-efs',               version: awsSdkVersion
   implementation group: 'com.amazonaws',                 name: 'aws-java-sdk-networkfirewall',   version: awsSdkVersion
 
-  implementation     group: 'com.dyngr',          name: 'polling',                        version: '1.1.3'
+  implementation     group: 'com.dyngr',          name: 'polling',                        version: dyngrPollingVersion
 
   testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter-test',       version: springBootVersion
   testImplementation group: 'org.springframework.boot',  name:'spring-boot-starter-freemarker',  version: springBootVersion
