--- a/cloud-gcp/build.gradle
+++ b/cloud-gcp/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation project(':cloud-template')
     implementation project(':auth-connector')
 
-    implementation group: 'com.dyngr',                     name: 'polling',                                    version: '1.1.3'
+    implementation group: 'com.dyngr',                     name: 'polling',                                    version: dyngrPollingVersion
     implementation group: 'org.slf4j',                     name: 'slf4j-api',                                  version: slf4jApiVersion
     implementation group: 'org.apache.commons',            name: 'commons-lang3',                              version: apacheCommonsLangVersion
     implementation group: 'commons-io',                    name: 'commons-io',                                 version: apacheCommonsIoVersion
