--- a/cloud-reactor/build.gradle
+++ b/cloud-reactor/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation group: 'org.springframework',           name: 'spring-tx',                      version: springFrameworkVersion
     implementation group: 'org.freemarker',                name: 'freemarker',                     version: freemarkerVersion
     implementation group: 'com.google.code.findbugs',      name: 'jsr305',                         version: '3.0.1'
-    implementation group: 'com.dyngr',                     name: 'polling',                        version: '1.1.3'
+    implementation group: 'com.dyngr',                     name: 'polling',                        version: dyngrPollingVersion
 
     testImplementation group: 'org.mockito',               name: 'mockito-core',                   version: mockitoVersion
     testImplementation group: 'org.springframework.boot',  name: 'spring-boot-starter',            version: springBootVersion
