--- a/cluster-dns-connector/build.gradle
+++ b/cluster-dns-connector/build.gradle
@@ -26,7 +26,7 @@ dependencies {
   implementation project(':grpc-common')
   implementation project(':auth-connector')
 
-  implementation     group: 'com.dyngr',                 name: 'polling',                         version: '1.1.3'
+  implementation     group: 'com.dyngr',                 name: 'polling',                         version: dyngrPollingVersion
 
   implementation     group: 'com.google.protobuf',                 name: 'protobuf-java',                  version: protobufVersion
 
