--- a/core/build.gradle
+++ b/core/build.gradle
@@ -228,7 +228,7 @@ dependencies {
     exclude group: 'org.yaml'
   }
 
-  implementation group: 'com.dyngr',                          name: 'polling',                          version: '1.1.3'
+  implementation group: 'com.dyngr',                          name: 'polling',                          version: dyngrPollingVersion
   implementation group: 'com.cedarsoftware',                  name: 'json-io',                          version: '4.9.12'
   implementation group: 'com.fasterxml.jackson.core',         name: 'jackson-databind',                 version: jacksonVersion
   implementation group: 'com.google.http-client',             name: 'google-http-client-jackson2',      version: '1.40.1'
