--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation     project(":status-checker")
     implementation     project(":template-manager-tag")
     implementation     project(':cluster-dns-connector')
+    implementation     project(":sdx-connector")
 
     implementation     group: "org.yaml",                  name: "snakeyaml",                                version: snakeYamlVersion
     implementation     group: "com.google.code.gson",      name: "gson",                                     version: gsonVersion
@@ -95,7 +96,7 @@ dependencies {
     implementation     group: 'org.springframework.boot',  name: 'spring-boot-starter-quartz',               version: springBootVersion
     implementation     group: "io.projectreactor",         name: "reactor-core",                             version: eventBusVersion
     implementation     group: "io.projectreactor",         name: "reactor-bus",                              version: eventBusVersion
-    implementation     group: 'com.dyngr',                 name: 'polling',                                  version: '1.1.3'
+    implementation     group: 'com.dyngr',                 name: 'polling',                                  version: dyngrPollingVersion
     implementation     group: 'net.sourceforge.jregex',    name: 'jregex',                                   version: '1.2_01'
     implementation     group: 'com.fasterxml.jackson.core',name: 'jackson-databind',                         version: jacksonVersion
 
