--- a/integration-test/docker-compose_template.yml
+++ b/integration-test/docker-compose_template.yml
@@ -84,6 +84,7 @@ services:
       - INTEGRATIONTEST_OUTPUTDIR=/it
       - INTEGRATIONTEST_DEFAULTPRIVATEKEYFILE
       - INTEGRATIONTEST_UMS_ACCOUNTKEY
+      - INTEGRATIONTEST_UMS_HOST
       - INTEGRATIONTEST_UMS_DEPLOYMENTKEY
       - INTEGRATIONTEST_UMS_JSONSECRET_VERSION
       - INTEGRATIONTEST_UMS_JSONSECRET_DESTINATIONPATH
