--- a/settings.gradle
+++ b/settings.gradle
@@ -78,4 +78,5 @@ include 'custom-configurations-api'
 include 'cloud-consumption'
 include 'cloud-consumption-api'
 include 'auth-distributor-connector'
+include 'sdx-connector'
 
