--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -70,6 +70,7 @@ auth:
     azure:
       disk:
         SSEWithCMK.enable: true
+      encryptionAtHost.enable: false
     aws:
       native.variant.migration.enable: true
       disk:
