CB-16292 Bring your own DNS zone - e2e test
Currently e2e tests with private endpoints for Azure are not possible because cloudbreak tests are running in the peered network, using cloudera on-prem DNS servers. It seems that adding DNS forwarders for Azure DNS might take much time.

In this commit
1) we introduced databasePrivateDnsZoneId for azure network parameters. In a test that uses single RG, private endpoints would be turned on automatically as well from the test. If then databasePrivateDnsZoneId is filled in, then it is passed in the envRequest.
2) we modified an already existing test tailored for azure single RG to use private endpoints
3) introduced CloudProviderAssertion: you can put any assertions you would like to conduct on dto responses in a cloud/provider specific way

With these modifications a new e2e test job can be created, with different network parameters.

--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -160,6 +160,7 @@ integrationtest:
       subnetIds:
         - cloud-daily.internal.1.westus2
         - cloud-daily.internal.0.westus2
+      databasePrivateDnsZoneId:
     credential:
       appId:
       appPassword:
