CB-16891. Configure CM service monitor to send metrics to prometheus. details: - configure prometheus related properties for CM service monitor (mgmt service) - move monitoring.init into highstate instead of calling directly - setup monitoring step is cleared (not removed yet from flow but it won't do anything) - re-use the cm metrics collector auth (username + password) for generating the username/password prometheus configs.

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -35,6 +35,9 @@ telemetry:
       username: ""
       password: ""
       token: ""
+    cloudera-manager:
+      monitoring-user: cmmonitoring
+      metrics-exporter-port: 61010
   upgrade:
     enabled: false
     cdp-telemetry:
