CB-15448 Improve FreeIPA HA Shutdown
RedHat identified a potential for data loss in FreeIPA HA during shutdown. When shutting down FreeIPA HA it is important that the instances are not all shutdown at the same time.
They should be shutdown in an orderly manner. When booted back up they should be powered up in the reverse order. The last node running during a shutdown and the first node up during bootup should be the primary instance.
There is a risk if all IPA servers are shutdown at the same time if there is unreplicated data. The replication data may be lost.
RH recommended leaving a few minutes between each successful shutdown/boot up. 2-5 minutes between servers should be sufficient.

Implementation:
- new entitlement for the new behavior: `CDP_FMS_DELAYED_STOP_START`
- new stop and start reactor event with corresponding handler introduced (the handlers' response event is the same as the normal) for delayed stop/start
- new `ScheduledExecutorService` introduced for scheduling the stop/start of instances
- as the new handlers are located in `cloud-reactor` module, to avoid the necessity of adding the new executor to all service, the new handlers are loaded only if the executor is available (conditional beans)
- ordering is done in the action, not in the handler, as handler is common for services
- environment polling interval for FreeIPA is doubled from 5sec to 10sec, so it would give enough time for FreeIPA to start

New stop sequence:
- `PRIMARY_GATEWAY` is stopped at last
- other instances are stopped in reverse alphabetical order
- first instance is stopped immediately
- if there are more instances, then there is a 5min wait between stopping instances
- delay is done by scheduling the next instance stop call with the executor service and waiting for it to be done

New start sequence:
- `PRIMARY_GATEWAY` is started at first without delay
- other instances started in alphabetical order
- everything else is the same as stop

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -84,6 +84,11 @@ freeipa:
   intermediate.threadpool:
     core.size: 100
     capacity.size: 4000
+  delayed:
+    stop-start-sec: 300
+    threadpool:
+      core:
+        size: 25
   passwordpolicy:
     min-password-lenght: 4
     max-password-lenght: 64
