CB-16945. Support https_proxy and no_proxy settings by cdp-vmagent.

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service
@@ -7,6 +7,7 @@ After=network-online.target
 Type=simple
 User=root
 Group=root
+EnvironmentFile=/opt/blackbox_exporter/blackbox.env
 ExecStart=/opt/blackbox_exporter/blackbox_exporter \
     --config.file=/opt/blackbox_exporter/blackbox.yml
 
