CB-16975. Support encryption between for vmagents and exporters
details:
- add new cert-helper.sh script to generate key+cert for cdp-vmagent and exporters
- set cdp-vmagent and exporters configurations to use TLS

--- a/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service
+++ b/orchestrator-salt/src/main/resources/salt-common/salt/monitoring/systemd/cdp-blackbox-exporter.service
@@ -9,6 +9,7 @@ User=root
 Group=root
 EnvironmentFile=/opt/blackbox_exporter/blackbox.env
 ExecStart=/opt/blackbox_exporter/blackbox_exporter \
+    --web.config.file=/opt/blackbox_exporter/blackbox_exporter-web-config.yml \
     --config.file=/opt/blackbox_exporter/blackbox.yml
 
 Restart=always
