--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -198,6 +198,20 @@ cb:
         m5a.12xlarge,
         m5a.16xlarge,
         m5a.24xlarge,
+        m5ad.xlarge,
+        m5ad.2xlarge,
+        m5ad.4xlarge,
+        m5ad.8xlarge,
+        m5ad.12xlarge,
+        m5ad.16xlarge,
+        m5ad.24xlarge,
+        m5d.xlarge,
+        m5d.2xlarge,
+        m5d.4xlarge,
+        m5d.8xlarge,
+        m5d.12xlarge,
+        m5d.16xlarge,
+        m5d.24xlarge,
         r5a.4xlarge,
         r5a.8xlarge,
         r5ad.xlarge,
@@ -243,7 +257,11 @@ cb:
         r4.2xlarge,
         r4.4xlarge,
         r4.8xlarge,
+        r5ad.12xlarge,
+        r5ad.24xlarge,
+        r5d.24xlarge,
         r5d.16xlarge,
+        r5d.12xlarge,
         r5d.8xlarge,
         r5d.4xlarge,
         r5d.2xlarge,
