CB-16987. basic auth between vmagent/exporter communication
details:
- pass basic auth configuration for exporters
- exporters using bcrypt hashed pwd, plain text won't work there - and bycrpty password cannot be repeated on next run - so it would be always a new one for highstates, therefore created a new script that will generate the password and print the encrypted output which will be stored in a file. in case of the file exists, it will only print the file content (there highstate won't show any change on next run, unless the plain text password changed - or changed in the pillar)
- reused node status monitor password for the exporters (similar component)

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -35,9 +35,18 @@ telemetry:
       username: ""
       password: ""
       token: ""
-    cloudera-manager:
-      monitoring-user: cmmonitoring
-      metrics-exporter-port: 61010
+    agent:
+      user: vmagent
+      port: 8429
+    node-exporter:
+      user: nodeuser
+      port: 9100
+    blackbox-exporter:
+      user: blackboxuser
+      port: 9115
+    cloudera-manager-exporter:
+      user: cmmonitoring
+      port: 61010
   upgrade:
     enabled: false
     cdp-telemetry:
