CB-17097 Create new test cases and upgrade test project for GOV Dev testing

--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -106,6 +106,8 @@ integrationtest:
 
   # aws parameters
   aws:
+    govCloud: false
+    multiaz: false
     region: eu-central-1
     location: eu-central-1
     availabilityZone: eu-central-1a
