CB-16670 Get credentials information from Environment service to calculate cloud usage
This commit extends the storage consumption flow to get the cloud credential from the Environment and store it in the flow context. Previously there was a separate skeleton flowstep for getting the cloud credential but this context approach follows the pattern of other flows in the codebase.

The change was tested by creating an environment, registering it via the storage consumption endpoint, triggering the storage consumption flow from the endpoint and executing a cloud API call from one of the flowsteps to verify that the credential gathering was working correctly in the flow.

--- a/cloud-consumption/build.gradle
+++ b/cloud-consumption/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     implementation project(':notification-sender')
     implementation project(':cloud-consumption-api')
     implementation project(':cloud-common')
+    implementation project(':environment-api')
 }
 
 bootRun {
