--- a/cloud-consumption/src/main/resources/application.yml
+++ b/cloud-consumption/src/main/resources/application.yml
@@ -62,6 +62,9 @@ consumption:
   threadpool:
     core.size: 40
     capacity.size: 4000
+  cloudbreak:
+    url: http://localhost:9091
+    contextPath: /cb
   environment:
     url: http://localhost:8088
     contextPath: /environmentservice
