--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -38,6 +38,7 @@ telemetry:
     agent:
       user: vmagent
       port: 8429
+      max-disk-usage: "4GB"
     node-exporter:
       user: nodeuser
       port: 9100
