CB-17045. Configure collector types for node-exporter. details: cpu cpufreq diskstats filefd filesystem loadavg meminfo netstat pressure processes stat systemd vmstat xfs see more: https://github.com/prometheus/node_exporter/blob/master/README.md#collectors

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -42,6 +42,22 @@ telemetry:
     node-exporter:
       user: nodeuser
       port: 9100
+      # see: https://github.com/prometheus/node_exporter/blob/master/README.md#collectors
+      collectors:
+        - cpu
+        - cpufreq
+        - diskstats
+        - filefd
+        - filesystem
+        - loadavg
+        - meminfo
+        - netstat
+        - pressure
+        - processes
+        - stat
+        - systemd
+        - vmstat
+        - xfs
     blackbox-exporter:
       user: blackboxuser
       port: 9115
