--- a/core/build.gradle
+++ b/core/build.gradle
@@ -295,6 +295,7 @@ dependencies {
   implementation project(':cloud-gcp')
   implementation project(':cloud-template')
   implementation project(':audit-connector')
+  implementation project(':sdx-connector')
   implementation project(':auth-connector')
   implementation project(':secret-engine')
   implementation project(':template-manager-core')
