CB-17090. Optimize freeipa node status check.
details:
- remove node status check from health check
- create new node status check job
- increase frequency from 2 min to 30 min
- do not map parsed string (json) to grpc object (no need for that anymore as metrics-consumer won't be used, we will have a different monitoring design)
- use (open/close) only 1 socket for multiple node status related http calls instead of n sockets for n calls

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -126,6 +126,8 @@ freeipa:
     connectionTimeoutMs: 5000
     readTimeoutMs: 5000
   nodestatus:
+    enabled: true
+    intervalsec: 1800
     connectionTimeoutMs: 5000
     readTimeoutMs: 5000
   batch:
