CB-17091 Add native e2e test for freeipa upgrade
- adjust FreeIPA creation to support multi az/AWS_NATIVE
- add freeipa upgrade to native long running tests
- implement method in `CloudResourceRetrieverService`

--- a/integration-test/src/main/resources/testsuites/e2e/aws-longrunning-e2e-native-tests.yaml
+++ b/integration-test/src/main/resources/testsuites/e2e/aws-longrunning-e2e-native-tests.yaml
@@ -3,3 +3,6 @@ tests:
   - name: "aws_longrunning_e2e_native_tests"
     classes:
       - name: com.sequenceiq.it.cloudbreak.testcase.e2e.distrox.DistroXUpgradeTests
+      - name: com.sequenceiq.it.cloudbreak.testcase.e2e.freeipa.FreeIpaUpgradeTests
+        includedMethods:
+          - testHAFreeIpaInstanceUpgrade
