DISTX-681: AZURE: Switch DE templates to use temporaryStorage: EPHEMERAL or temporaryStorage: COMBINED/EPHEMERAL_OR_ATTACHED
This commit changes 7.2.14, 7.2.15, 7.2.16 runtime versions of DE, DE-HA and DE spark3 templates.

    The master instance type for DE Spark3 template is changed from "Standard_D8_v3" to "Standard_D16_v3".
    The compute and worker instance types for DE, DE-HA and spark3 templates are changed to "Standard_D5_v2".
    The attached volume count for compute host group is changed to 0. So that only ephemeral/local volumes are used by default.

Compute nodes run YARN and require storage only for temporary data - this requirement is fulfilled by instance storage, so making the attached volumes count to 0 by default is better for customer w.r.t cost.

Template Validator is updated to allow compute instance group to have zero volume count. Earlier as part of CB-7552 , this check was removed for IDbroker instance group type. I am removing the check for compute instance group in similar way it was removed for IDbroker.

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -321,6 +321,7 @@ cb:
         georedundantbackup: false
     distrox:
       enabled.instance.types: >
+        Standard_D5_v2,
         Standard_D8_v3,
         Standard_D8s_v3,
         Standard_D16_v3,
