CB-17065 Send the full usersync result to AuthDistributor
- Call auth distributor updateAuthViewForEnvironment endpoint after usersync and send full user data.
- Call auth distributor removeAuthViewForEnvironment endpoint during FreeIpa delete.
- Create endpoints in thunderhead mock for local development and mock tests.
- If auth distributor is not available or fails, first retry and then fail silently and log the error.
- Partial user sync is not available if CDP_SAAS entitlement is enabled

--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -110,6 +110,9 @@ dependencies {
   implementation (project(':sdx-connector')) {
     transitive = false;
   }
+  implementation (project(':auth-distributor-connector')) {
+    transitive = false;
+  }
 
   implementation project(':common')
   implementation project(':cloud-gcp')
