--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -319,6 +319,9 @@ integrationtest:
     cluster:
     app:
 
+  authdistributor:
+    host: thunderhead-mock
+
 altus:
   audit:
     endpoint: localhost:8982
