--- a/freeipa/build.gradle
+++ b/freeipa/build.gradle
@@ -120,6 +120,7 @@ dependencies {
   implementation project(':structuredevent-model')
   implementation project(':audit-connector')
   implementation project(':authorization-common')
+  implementation project(':auth-distributor-connector')
   implementation project(':cloud-reactor-api')
   implementation project(':cloud-reactor')
   implementation project(':cloud-aws-common')
