CB-17150 do not enable all the cloud proivders and gov cloud providers whith empty list as config value

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -108,7 +108,7 @@ altus:
     caller: cloudbreak
 
 cb:
-  enabledplatforms: AZURE,AWS,GCP
+  enabledplatforms: AWS,AZURE,YARN,GCP,MOCK
   enabledgovplatforms: AWS
   platform.default.rootVolumeSize:
     AWS: 100
