CB-17200 Add entitlement for FreeIpa recipes

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -23,6 +23,7 @@ auth:
       batch.call.enable: true
       usersync.thread.timeout.enable: true
       delayedstopstart.enable: true
+      recipes.enable: true
     cloudstoragevalidation.enable:
       global: true
       aws: true
