CB-16056 Support recipes for FreeIPA provisioning/termination
It is phase1 implementation. I will rename CM recipe types like post_CM_install to something like post_service_install etc, but not in this PR, it will be a separated PR. Attaching / detaching recipes are not supported yet, but it is part of the plan, so it will be implemented in phase2.
Recipes saved into both env service then freeipa service because of restartable flows. Salt states moved to the common salt directory and reused the whole original salt logic.

--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -89,7 +89,7 @@ environment:
     url: http://localhost:8090
     contextPath: /freeipa
     synchronizeOnStart: true
-    supportedPlatforms: AWS,AZURE,GCP
+    supportedPlatforms: AWS,AZURE,GCP,MOCK
   sdx:
     url: http://localhost:8086
     contextPath: /dl
