--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project(':audit-connector')
     implementation     project(":authorization-common")
     implementation     project(":common")
+    implementation     project(':core-common')
     implementation     project(":secret-engine")
     implementation     project(":flow")
     implementation     project(":auth-connector")
