--- a/settings.gradle
+++ b/settings.gradle
@@ -60,6 +60,7 @@ include 'flow-api'
 include 'template-manager-tag'
 include 'common-handlebar'
 include 'environment-common'
+include 'core-common'
 include 'audit-connector'
 include 'telemetry-common'
 include 'structuredevent-service-legacy'
