CB-17216 Integrate consumption into environment (create & terminate)
* Add cloud-consumption-api as new compile dependency for environment
  service.
* Integrate consumption schedule / unschedule invocations into
  environment create & terminate flows.
* Add new environment states and related notification messages.
* Some code cleanup.
* Testing:
  * Manual testing in local CB.
  * Added new UT and updated existing ones.

--- a/environment/src/main/resources/application-test.yml
+++ b/environment/src/main/resources/application-test.yml
@@ -64,6 +64,11 @@ environment:
     supportedPlatforms: AWS,AZURE
   sdx:
     url: http://localhost:8086
+    contextPath: /dl
+  consumption:
+    url: http://localhost:8099
+    contextPath: /consumption
+    enabled: false
   db:
     enabled: false
 #    host: localhost
