--- a/environment/build.gradle
+++ b/environment/build.gradle
@@ -68,10 +68,10 @@ dependencies {
     implementation     project(":cloud-mock")
     implementation     project(":cloud-yarn")
     implementation     project(":cloud-gcp")
-    implementation     project(":core-api")
     implementation     project(":idbmms-connector")
     implementation     project(":redbeams-api")
     implementation     project(":freeipa-api")
+    implementation     project(":cloud-consumption-api")
     implementation     project(":structuredevent-service-cdp")
     implementation     project(":status-checker")
     implementation     project(":template-manager-tag")
