--- a/environment/src/main/resources/application.yml
+++ b/environment/src/main/resources/application.yml
@@ -93,6 +93,10 @@ environment:
   sdx:
     url: http://localhost:8086
     contextPath: /dl
+  consumption:
+    url: http://localhost:8099
+    contextPath: /consumption
+    enabled: false
   db:
     host: localhost
     port: 5432
