CB-17256. Create temporal entitlement to enable compute monitoring.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -69,6 +69,7 @@ auth:
     datahub.nodestatus.check.enable: true
     nodestatus.salt.ping.enable: true
     diagnostics.vm.enable: true
+    compute.monitoring.enable: false
     user.sync.credentials.update.optimization.enable: true
     azure:
       disk:
