CB-17330. Add prometheus client with remote write support to CB
details:
- As we can send metrics from compute plane to our central CP monitoring stack it's required to send the status of the clusters in order to avoid to create invalid alerts (e.g.: if there is an upgrade in progress, could be if some services are not available -> that's a totally valid state, but it is not if the cluster is in available state)
- create new metrics-client module
- generate required objects for remote write from prometheus proto files
- add metrics-client usage for core + freeipa (client won't do anything until compute-monitoring is not used - although processor is enabled but compute-monitoring is not enabled yet)

--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -30,6 +30,11 @@ telemetry:
     remote-write-url: ""
     scrape-interval-seconds: 300
     dev-stack: false
+    status-processor:
+      enabled: true
+      workers: 1
+      queue-size-limit: 1000
+      http-timeout-seconds: 30
     global-auth:
       enabled: false
       username: ""
