--- a/settings.gradle
+++ b/settings.gradle
@@ -69,6 +69,7 @@ include 'auth-internal'
 include 'auth-internal-api'
 include 'datalake-dr-connector'
 include 'mock-infrastructure'
+include 'metrics-client'
 include 'node-status-monitor-client'
 include 'cloud-aws-common'
 include 'cloud-aws-native'
