--- a/core/build.gradle
+++ b/core/build.gradle
@@ -283,6 +283,7 @@ dependencies {
   implementation project(':cluster-proxy')
   implementation project(':status-checker')
   implementation project(':node-status-monitor-client')
+  implementation project(':metrics-client')
   implementation project(':telemetry-common')
   implementation project(":notification-sender")
   implementation project(":custom-configurations-api")
