--- a/integration-test/src/main/resources/testsuites/v4/mock/real-ums-mock-tests.yaml
+++ b/integration-test/src/main/resources/testsuites/v4/mock/real-ums-mock-tests.yaml
@@ -13,6 +13,7 @@ tests:
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.DataHubCreateInternalApiTest
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.ChangeImageCatalogTest
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.SdxEventControllerAuthTest
+      - name: com.sequenceiq.it.cloudbreak.testcase.authorization.ProxyTest
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.listfiltering.CredentialListFilteringTest
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.listfiltering.DataHubListFilteringTest
       - name: com.sequenceiq.it.cloudbreak.testcase.authorization.listfiltering.DataLakeListFilteringTest
