CB-17428. Cluster creation fails due to node_exporter.key generation error.
details:
cert generation could fail if the cluster name is too long as hostname generated from that
as domain name can be set as alternative domain name (instead of common name) - that is good enough.

--- a/cloud-consumption/build.gradle
+++ b/cloud-consumption/build.gradle
@@ -124,8 +124,14 @@ dependencies {
     implementation project(':secret-engine')
     implementation project(':notification-sender')
     implementation project(':cloud-consumption-api')
-    implementation project(':cloud-common')
     implementation project(':environment-api')
+    implementation project(':cloud-aws-common')
+    implementation project(':cloud-aws-cloudformation')
+    implementation project(":cloud-reactor-api")
+//    implementation project(":cloud-reactor")
+    implementation project(':cloud-common')
+//    runtimeOnly project(':cloud-mock')
+
 }
 
 bootRun {
