CB-17230: [AWS][pre-check] Backup/restore permissions on environment creation.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -50,6 +50,7 @@ auth:
       multiaz.enable: true
       select.instance.type.enable: true
       zdu.osupgrade.enable: true
+      backup.restore.permission.checks.enabled: false
     differentdatahubversionthandatalake.enabled: true
     database.wire.encryption.enable: true
     datahub:
