--- a/core/build.gradle
+++ b/core/build.gradle
@@ -255,6 +255,7 @@ dependencies {
   implementation project(':cloud-reactor')
   implementation project(':structuredevent-model')
   implementation project(':structuredevent-service-legacy')
+  implementation project(':structuredevent-api-cdp')
   implementation project(':template-manager-blueprint')
   implementation project(':template-manager-recipe')
   implementation project(':template-manager-cmtemplate')
