CDPCP-7321. Usersync enforce hard limit on group size
This commit adds a hard limit to the group size that usersync will add members to. This
feature is intended as a temporary guardrail until the planned scalability work to
perform usersync work through LDAP directly rather than through the FreeIPA APIs.

This feature is protected by entitlement CDP_USERSYNC_ENFORCE_GROUP_MEMBER_LIMIT
so that customer environments may be evaluated for impact before granting. E.g., the
customer may already have groups that are larger than the limit.

The specific changes are as follow:
- The entitlement check was added to the EntitlementService and test
- Two configurations are used. One indicates the level at which large groups are logged
  and the other is the limit above which group memberships are not added to FreeIPA
- The UserSyncOptions was updated to include these two configurations and a flag on whether
  to enforce the limit. This was done so that configuration is centralized in the UserSyncService
- The UmsUsersState was updated so that the bulk and default providers can calculate which
  groups are large
- The existing large group log message was updated to include the group names
- The UsersStateDifferenceCalculator now checks whether the limits are enforced and adds
  messages to the warnings map when groups exceed the limit. This lets the usersync
  operation get marked as failure and propagates the group name and size to the operation
  status

Note that there is some inconsistency of behavior with partial usersyncs. Partial usersync
should not retrieve enough actors to know whether a group has exceeded the limit. Running
partial usersyncs for each actor individually would eventually populate the large groups.

--- a/freeipa/src/main/resources/application.yml
+++ b/freeipa/src/main/resources/application.yml
@@ -117,7 +117,9 @@ freeipa:
     threadpool:
       core.size: 100
       capacity.size: 4000
-    scale.large-group-size: 500
+    scale.large-group:
+      size: 500
+      limit: 750
   cloudidsync:
     poller:
       timeoutMs: 4000
