--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -101,6 +101,10 @@ datalake:
   freeipa:
     url: http://localhost:8090
     contextPath: /freeipa
+  consumption:
+    url: http://localhost:8099
+    contextPath: /consumption
+    enabled: false
   db:
     port.5432.tcp:
       port: 5432
