ENGESC-15134 add X-Forwarded-For to nginx config

--- a/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/nginx/conf/clouderamanager-ssl-user-facing.conf
@@ -59,6 +59,7 @@ server {
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-Host $server_name;
         proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection $connection_upgrade;
         proxy_set_header   Referer {{ protocol }}://$host/$1;
@@ -77,6 +78,7 @@ server {
         proxy_set_header   Referer https://$host/;
         proxy_set_header   X-Forwarded-Host $server_name;
         proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   Expect $http_expect;
         # Ensure request_id/trace_id gets passed down to Knox
         proxy_set_header   X-Request-Id $request_id;
