--- a/common/src/main/resources/common-config.yml
+++ b/common/src/main/resources/common-config.yml
@@ -44,6 +44,9 @@ telemetry:
       user: vmagent
       port: 8429
       max-disk-usage: "4GB"
+      retention-min-time: "5m"
+      retention-max-time: "4h"
+      wal-truncate-frequency: "2h"
     request-signer:
       enabled: true
       port: 61095
