CB-17547 Track datalake salt password rotation progress in a flow

--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -66,6 +66,9 @@ sdx:
     cmsync:
       sleeptime_sec: 10
       duration_min: 10
+    rotatesaltpassword:
+      sleeptime_sec: 10
+      duration_min: 10
   gateway:
     topology:
       name: cdp-proxy
