--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -74,6 +74,7 @@ auth:
     user.sync:
       credentials.update.optimization.enable: true
       group-size.enforce-limit.enable: true
+      split-freeipa-user-retrieval.enable: true
     azure:
       disk:
         SSEWithCMK.enable: true
