CB-17615 Add sanity test for compute monitoring on FreeIpa, SDX and Distrox nodes

--- a/integration-test/src/main/resources/application.yml
+++ b/integration-test/src/main/resources/application.yml
@@ -324,6 +324,9 @@ integrationtest:
   authdistributor:
     host: thunderhead-mock
 
+  telemetry:
+    remoteWriteUrl:
+
 altus:
   audit:
     endpoint: localhost:8982
