--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -116,7 +116,7 @@ cb:
     AWS: 100
     AZURE: 100
     GCP: 100
-  enabled.linux.types: redhat6,redhat7,centos6,centos7
+  enabled.linux.types: redhat6,redhat7,redhat8,centos6,centos7
   default.gateway.cidr: 0.0.0.0/0
   publicip:
   etc.config.dir: /etc/cloudbreak
