CB-11835 Initial API E2E and INT rewrite to avoid Mock IDBroker Mapping

--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -113,6 +113,9 @@ dependencies {
   implementation (project(':auth-distributor-connector')) {
     transitive = false;
   }
+  implementation (project(':idbmms-connector')) {
+    transitive = false;
+  }
 
   implementation project(':common')
   implementation project(':cloud-gcp')
