--- a/idbmms-connector/build.gradle
+++ b/idbmms-connector/build.gradle
@@ -24,6 +24,7 @@ dependencyManagement {
 
 dependencies {
   implementation project(':grpc-common')
+  implementation project(':auth-connector')
 
   implementation     group: 'com.google.protobuf',                 name: 'protobuf-java',                  version: protobufVersion
 
