CB-17622 Remove ZOMBIE nodes automatically after upscale
- New property: cb.upscale.zombie.auto.cleanup.enabled (default value: true)
- Add cluster and stack downscale flow trigger events for zombie nodes at the end of the upscale flow chain
- Use Payload class instead of stackId in FlowTriggerCondition implementations
- Save variables (contextParams) parameters into last and first FlowLog entry as well (in a flowchain). This is necessary to properly restart flow (flowchain) after POD restart.
- Create special trigger condition result in order to silently skip flow execution when its not needed. (no zombie nodes exists)
- Clean up flowchain when trigger condition fails/skips flow execution
- Improve downscale flows to handle Zombie node cleanup properly

--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -799,6 +799,8 @@ cb:
   loadBalancer:
     supportedPlatforms: AWS,YARN,AZURE,GCP
 
+  upscale:
+    zombie.auto.cleanup.enabled: true
   upgrade:
     failure.sync:
       sdx.enabled: false
