--- a/integration-test/docker-compose_template.yml
+++ b/integration-test/docker-compose_template.yml
@@ -74,6 +74,7 @@ services:
       - INTEGRATIONTEST_DATABASE_USERNAME
       - INTEGRATIONTEST_DATABASE_PASSWORD
       - INTEGRATIONTEST_IMAGECATALOGNAME
+      - INTEGRATIONTEST_AWS_MULTIAZ
       - INTEGRATIONTEST_AWS_CREDENTIAL_ACCESSKEYID
       - INTEGRATIONTEST_AWS_CREDENTIAL_SECRETKEY
       - INTEGRATIONTEST_AWS_CREDENTIAL_ROLEARN
@@ -84,12 +85,14 @@ services:
       - INTEGRATIONTEST_AWS_DISKENCRYPTION_DATAHUBKEY
       - INTEGRATIONTEST_OUTPUTDIR=/it
       - INTEGRATIONTEST_DEFAULTPRIVATEKEYFILE
+      - INTEGRATIONTEST_SSHPUBLICKEY
       - INTEGRATIONTEST_UMS_ACCOUNTKEY
       - INTEGRATIONTEST_UMS_HOST
       - INTEGRATIONTEST_UMS_DEPLOYMENTKEY
       - INTEGRATIONTEST_UMS_JSONSECRET_VERSION
       - INTEGRATIONTEST_UMS_JSONSECRET_DESTINATIONPATH
       - INTEGRATIONTEST_UMS_JSONSECRET_NAME
+      - INTEGRATIONTEST_RUNTIMEVERSION
     image: openjdk:11-jdk
     deploy:
       resources:
