CB-17317: Enable Datalake DR for the datalake service permanently, enabling for integration tests to perform DR actions. Specifically, resize e2e test is extended to test for expected DR actions.

--- a/datalake/src/main/resources/application.yml
+++ b/datalake/src/main/resources/application.yml
@@ -86,7 +86,7 @@ altus:
     enabled: true
     endpoint: localhost:8982
   datalakedr:
-    enabled: false
+    enabled: true
     endpoint: localhost:8989
 
 datalake:
